--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  background: #0026ff;
+  background: #f04a03;
   color: white;
   display: flex;
   justify-content: center;
